Refactor federation constants
Use Stream.toList() to ensure lists are unmodifiable

Add a new value for pre lovell activation age in testnet